--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registration Form</title>
+  <title>Registration</title>
   <link rel="stylesheet" href="styles.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -22,14 +22,16 @@
       <div class="input-box">
         <input type="password" id="registerPassword" placeholder="Password" required>
         <i class='bx bxs-lock-alt'></i>
+        <i class='bx bxs-show password-icon bx-hide'></i>
       </div>
       <div class="input-box">
         <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
         <i class='bx bxs-lock-alt'></i>
+        <i class='bx bxs-show confirm-password-icon bx-hide'></i>
       </div>
       <button type="submit" class="btn">Register</button>
-      <div class="register-link">
-        <p>Already have an account? <a href="index.html">Login</a></p>
+       <div class="register-link">
+        <p>Already have an account? Click <a href="index.html">Login</a></p>
       </div>
     </form>
   </div>
