--- a/welcome.html
+++ b/welcome.html
@@ -3,27 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome Page</title>
+  <title>Welcome</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="wrapper">
-    <h1>Welcome, <span id="welcomeUsername"></span>!</h1>
+    <h1>Welcome, <span id="username"></span>!</h1>
     <br>
-    <h6>Huwag mo na butasan sir, ok na 95 hehe</h6>
-    <br />
+    <br>
     <button id="logoutButton" class="btn">Logout</button>
   </div>
-  <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      const username = localStorage.getItem('loggedUser');
-      document.getElementById('welcomeUsername').textContent = username || 'Guest';
-      
-      document.getElementById('logoutButton').addEventListener('click', () => {
-        localStorage.removeItem('loggedUser');
-        window.location.href = 'index.html';
-      });
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
