--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
   <title>Registration</title>
   <link rel="stylesheet" href="styles.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <script> windows.history.forward(1);</script>
 </head>
 <body>
   <div class="wrapper">
