--- a/welcome.html
+++ b/welcome.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="wrapper">
-    <h1>Welcome, <span id="username"></span>!</h1>
-    <br>
-    <br>
-    <button id="logoutButton" class="btn">Logout</button>
-  </div>
-  <script src="script.js"></script>
+     <div class="hero-header">
+        <div class="wrapper">
+            <header>
+                <div class="logo">
+                    <i class="fa-solid fa-l"></i>
+                    <div class="logo-text"><br>Welcome, <span id="username"></span>!</div>
+                </div>
+            </header>
+            <div class="container">
+                 <div class="hero-pic">
+                    <img src="me.jpg" alt="profile pic">
+                 </div>
+                 <div class="hero-text">
+                    <h5>Hi I'm</h5>
+                    <h1>Lorenz Estrella</h1>
+                    <p> Want to know about me? Just visit my website!
+                    </p>
+
+                    <div class="btn-group">
+                       <a href="https://lornez07.github.io/main/" class="btn active">My Website</a>
+                    </div>
+                 </div>
+            </div>
+        </div>
+     </div>
+     <script src="script.js"></script>
 </body>
-</html>
+          </html>
