--- a/welcome.html
+++ b/welcome.html
@@ -23,7 +23,7 @@
                  <div class="hero-text">
                     <h5>Hi I'm</h5>
                     <h1>Lorenz Estrella</h1>
-                    <p> Want to know about me? Just visit my website!
+                    <p> Want to know more about me? Just visit my website!
                     </p>
 
                     <div class="btn-group">
