--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <p>Don't have an account? Click <a href="register.html">Register</a></p>
       </div>
     </form>
+    <br>
+    <br>
+    <h6>user: admin<br>pass: admin123</h6>
   </div>
   <script src="script.js"></script>
 </body>
